<resources>

    <!-- App name strings. -->
    <string name="short_app_name">SWDB</string>
    <string name="app_name">Star Wars Database</string>

    <!-- CategoryActivity strings. -->
    <string name="drawer_open_action_label">Open navigation drawer</string>
    <string name="drawer_close_action_label">Close navigation drawer</string>
    <string name="categories_label">Categories</string>

    <!-- Top-level fragment names. -->
    <string name="person_names_fragment_name">People</string>
    <string name="film_names_fragment_name">Films</string>
    <string name="starship_names_fragment_name">Starships</string>
    <string name="vehicle_names_fragment_name">Vehicles</string>
    <string name="species_names_fragment_name">Species</string>
    <string name="planet_names_fragment_name">Planets</string>

    <!-- 2nd-level fragment names. -->
    <string name="empty_details_fragment_name">Empty Details</string>
    <string name="person_details_fragment_name">Person Details</string>
    <string name="film_details_fragment_name">Film Details</string>
    <string name="starship_details_fragment_name">Starship Details</string>
    <string name="vehicle_details_fragment_name">Vehicle Details</string>
    <string name="species_details_fragment_name">Species Details</string>
    <string name="planet_details_fragment_name">Planet Details</string>

    <!-- Detail label strings. -->
    <string name="name_detail_label">Name</string>
    <string name="homeworld_detail_label">Homeworld</string>
    <string name="birth_year_detail_label">Birth Year</string>
    <string name="species_detail_label">Species</string>
    <string name="gender_detail_label">Gender</string>
    <string name="height_detail_label">Height</string>
    <string name="mass_detail_label">Mass</string>
    <string name="hair_color_detail_label">Hair Color</string>
    <string name="eye_color_detail_label">Eye Color</string>
    <string name="skin_color_detail_label">Skin Color</string>
    <string name="films_detail_label">Films</string>
    <string name="starships_detail_label">Starships</string>
    <string name="vehicles_detail_label">Vehicles</string>
    <string name="title_detail_label">Title</string>
    <string name="episode_detail_label">Episode</string>
    <string name="release_date_detail_label">Release Date</string>
    <string name="director_detail_label">Director</string>
    <string name="producer_detail_label">Producer</string>
    <string name="opening_crawl_detail_label">Opening Crawl</string>
    <string name="characters_detail_label">Characters</string>
    <string name="planets_detail_label">Planets</string>
    <string name="model_detail_label">Model</string>
    <string name="starship_class_detail_label">Starship Class</string>
    <string name="manufacturer_detail_label">Manufacturer</string>
    <string name="cost_detail_label">Cost</string>
    <string name="length_detail_label">Length</string>
    <string name="hyperdrive_rating_detail_label">Hyperdrive Rating</string>
    <string name="mglt_detail_label">MGLT</string>
    <string name="max_atmosphering_speed_detail_label">Max Atmosphering Speed</string>
    <string name="crew_detail_label">Crew</string>
    <string name="passengers_detail_label">Passengers</string>
    <string name="cargo_capacity_detail_label">Cargo Capacity</string>
    <string name="consumables_detail_label">Consumables</string>
    <string name="pilots_detail_label">Pilots</string>
    <string name="vehicle_class_detail_label">Vehicle Class</string>
    <string name="classification_detail_label">Classification</string>
    <string name="designation_detail_label">Designation</string>
    <string name="average_height_detail_label">Average Height</string>
    <string name="skin_colors_detail_label">Skin Colors</string>
    <string name="hair_colors_detail_label">Hair Colors</string>
    <string name="eye_colors_detail_label">Eye Colors</string>
    <string name="average_lifespan_detail_label">Average Lifespan</string>
    <string name="language_detail_label">Language</string>
    <string name="people_detail_label">People</string>
    <string name="rotation_period_detail_label">Rotation Period</string>
    <string name="orbital_period_detail_label">Orbital Period</string>
    <string name="diameter_detail_label">Diameter</string>
    <string name="climate_detail_label">Climate</string>
    <string name="gravity_detail_label">Gravity</string>
    <string name="terrain_detail_label">Terrain</string>
    <string name="surface_water_detail_label">Surface Water</string>
    <string name="population_detail_label">Population</string>
    <string name="residents_detail_label">Residents</string>

    <!-- Error strings. -->
    <string name="fetch_items_error_message">Error fetching items</string>
    <string name="retry_button_label">Retry</string>

    <!-- Empty strings. -->
    <string name="empty_details_message">No item selected. Select one from the list!</string>

</resources>