<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/categories_label">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/person_names_fragment"
                    android:title="@string/person_names_fragment_name" />

                <item
                    android:id="@+id/films_list_fragment"
                    android:title="@string/film_names_fragment_name" />

                <item
                    android:id="@+id/starships_list_fragment"
                    android:title="@string/starship_names_fragment_name" />

                <item
                    android:id="@+id/vehicles_list_fragment"
                    android:title="@string/vehicle_names_fragment_name" />

                <item
                    android:id="@+id/species_list_fragment"
                    android:title="@string/species_names_fragment_name" />

                <item
                    android:id="@+id/planets_list_fragment"
                    android:title="@string/planet_names_fragment_name" />

            </group>

        </menu>

    </item>

</menu>