<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_category"
    app:startDestination="@id/person_names_fragment">

    <!-- Top-level fragment destinations. -->
    <fragment
        android:id="@+id/person_names_fragment"
        android:name="com.davidread.starwarsdatabase.view.PersonNamesFragment"
        android:label="@string/person_names_fragment_name"
        tools:layout="@layout/fragment_resource_names">

        <action
            android:id="@+id/action_personNamesFragment_to_personDetailsFragment"
            app:destination="@id/person_details_fragment" />

    </fragment>

    <fragment
        android:id="@+id/film_names_fragment"
        android:name="com.davidread.starwarsdatabase.view.FilmNamesFragment"
        android:label="@string/film_names_fragment_name"
        tools:layout="@layout/fragment_resource_names">

        <action
            android:id="@+id/action_filmNamesFragment_to_filmDetailsFragment"
            app:destination="@id/film_details_fragment" />

    </fragment>

    <fragment
        android:id="@+id/starship_names_fragment"
        android:name="com.davidread.starwarsdatabase.view.StarshipNamesFragment"
        android:label="@string/starship_names_fragment_name"
        tools:layout="@layout/fragment_resource_names">

        <action
            android:id="@+id/action_starshipNamesFragment_to_starshipDetailsFragment"
            app:destination="@id/starship_details_fragment" />

    </fragment>

    <fragment
        android:id="@+id/vehicle_names_fragment"
        android:name="com.davidread.starwarsdatabase.view.VehicleNamesFragment"
        android:label="@string/vehicle_names_fragment_name"
        tools:layout="@layout/fragment_resource_names" />

    <fragment
        android:id="@+id/species_names_fragment"
        android:name="com.davidread.starwarsdatabase.view.SpeciesNamesFragment"
        android:label="@string/species_names_fragment_name"
        tools:layout="@layout/fragment_resource_names" />

    <fragment
        android:id="@+id/planet_names_fragment"
        android:name="com.davidread.starwarsdatabase.view.PlanetNamesFragment"
        android:label="@string/planet_names_fragment_name"
        tools:layout="@layout/fragment_resource_names" />

    <!-- 2nd-level fragment destinations. -->
    <fragment
        android:id="@+id/person_details_fragment"
        android:name="com.davidread.starwarsdatabase.view.PersonDetailsFragment"
        android:label="@string/person_details_fragment_name"
        tools:layout="@layout/fragment_resource_details">

        <argument
            android:name="id"
            app:argType="integer" />

    </fragment>

    <fragment
        android:id="@+id/film_details_fragment"
        android:name="com.davidread.starwarsdatabase.view.FilmDetailsFragment"
        android:label="@string/film_details_fragment_name"
        tools:layout="@layout/fragment_resource_details">

        <argument
            android:name="id"
            app:argType="integer" />

    </fragment>

    <fragment
        android:id="@+id/starship_details_fragment"
        android:name="com.davidread.starwarsdatabase.view.StarshipDetailsFragment"
        android:label="@string/starship_details_fragment_name"
        tools:layout="@layout/fragment_resource_details">

        <argument
            android:name="id"
            app:argType="integer" />

    </fragment>

    <fragment
        android:id="@+id/vehicle_details_fragment"
        android:name="com.davidread.starwarsdatabase.view.VehicleDetailsFragment"
        android:label="@string/vehicle_details_fragment_name"
        tools:layout="@layout/fragment_resource_details">

        <argument
            android:name="id"
            app:argType="integer" />

    </fragment>

    <fragment
        android:id="@+id/species_details_fragment"
        android:name="com.davidread.starwarsdatabase.view.SpeciesDetailsFragment"
        android:label="@string/species_details_fragment_name"
        tools:layout="@layout/fragment_resource_details">

        <argument
            android:name="id"
            app:argType="integer" />

    </fragment>

    <fragment
        android:id="@+id/planet_details_fragment"
        android:name="com.davidread.starwarsdatabase.view.PlanetDetailsFragment"
        android:label="@string/planet_details_fragment_name"
        tools:layout="@layout/fragment_resource_details">

        <argument
            android:name="id"
            app:argType="integer" />

    </fragment>

</navigation>