<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_sub"
    app:startDestination="@id/empty_details_fragment">

    <action
        android:id="@+id/action_global_personDetailsFragment"
        app:destination="@id/person_details_fragment" />

    <action
        android:id="@+id/action_global_filmDetailsFragment"
        app:destination="@id/film_details_fragment" />

    <action
        android:id="@+id/action_global_starshipDetailsFragment"
        app:destination="@id/starship_details_fragment" />

    <action
        android:id="@+id/action_global_vehicleDetailsFragment"
        app:destination="@id/vehicle_details_fragment" />

    <action
        android:id="@+id/action_global_speciesDetailsFragment"
        app:destination="@id/species_details_fragment" />

    <action
        android:id="@+id/action_global_planetDetailsFragment"
        app:destination="@id/planet_details_fragment" />

    <fragment
        android:id="@+id/empty_details_fragment"
        android:name="com.davidread.starwarsdatabase.view.EmptyDetailsFragment"
        android:label="@string/empty_details_fragment_name"
        tools:layout="@layout/fragment_empty_details" />

    <fragment
        android:id="@+id/person_details_fragment"
        android:name="com.davidread.starwarsdatabase.view.PersonDetailsFragment"
        android:label="@string/person_details_fragment_name"
        tools:layout="@layout/fragment_resource_details">

        <argument
            android:name="id"
            app:argType="integer" />

    </fragment>

    <fragment
        android:id="@+id/film_details_fragment"
        android:name="com.davidread.starwarsdatabase.view.FilmDetailsFragment"
        android:label="@string/film_details_fragment_name"
        tools:layout="@layout/fragment_resource_details">

        <argument
            android:name="id"
            app:argType="integer" />

    </fragment>

    <fragment
        android:id="@+id/starship_details_fragment"
        android:name="com.davidread.starwarsdatabase.view.StarshipDetailsFragment"
        android:label="@string/starship_details_fragment_name"
        tools:layout="@layout/fragment_resource_details">

        <argument
            android:name="id"
            app:argType="integer" />

    </fragment>

    <fragment
        android:id="@+id/vehicle_details_fragment"
        android:name="com.davidread.starwarsdatabase.view.VehicleDetailsFragment"
        android:label="@string/vehicle_details_fragment_name"
        tools:layout="@layout/fragment_resource_details">

        <argument
            android:name="id"
            app:argType="integer" />

    </fragment>

    <fragment
        android:id="@+id/species_details_fragment"
        android:name="com.davidread.starwarsdatabase.view.SpeciesDetailsFragment"
        android:label="@string/species_details_fragment_name"
        tools:layout="@layout/fragment_resource_details">

        <argument
            android:name="id"
            app:argType="integer" />

    </fragment>

    <fragment
        android:id="@+id/planet_details_fragment"
        android:name="com.davidread.starwarsdatabase.view.PlanetDetailsFragment"
        android:label="@string/planet_details_fragment_name"
        tools:layout="@layout/fragment_resource_details">

        <argument
            android:name="id"
            app:argType="integer" />

    </fragment>

</navigation>